// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`align.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-column"
  >
    <div
      class="t-radio-group t-radio-group-medium t-radio-group-outline"
    >
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          readonly=""
          type="radio"
          value="left"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          左对齐
        </span>
      </label>
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          checked=""
          class="t-radio-button__former"
          readonly=""
          type="radio"
          value="right"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          右对齐
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          readonly=""
          type="radio"
          value="top"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          顶部对齐
        </span>
      </label>
    </div>
    <form
      class="t-form"
    >
      <div
        class="t-form__item t-form-item__name"
      >
        <div
          class="t-form__label t-form__label--right"
          style="width: 80px;"
        >
          <label>
            名字
          </label>
        </div>
        <div
          class="t-form__controls"
          style="margin-left: 80px;"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-form__item t-form-item__password"
      >
        <div
          class="t-form__label t-form__label--right"
          style="width: 80px;"
        >
          <label>
            密码
          </label>
        </div>
        <div
          class="t-form__controls"
          style="margin-left: 80px;"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`base.jsx 1`] = `
<DocumentFragment>
  <form
    class="t-form"
  >
    <div
      class="t-form__item t-form-item__name"
    >
      <div
        class="t-form__label t-form__label--colon t-form__label--right"
        style="width: 100px;"
      >
        <label>
          姓名
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 100px;"
      >
        <div
          class="t-form__controls--content"
        >
          <div
            class="t-input"
          >
            <input
              class="t-input__inner"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-form__item t-form-item__birthday"
    >
      <div
        class="t-form__label t-form__label--colon t-form__label--right"
        style="width: 100px;"
      >
        <label>
          出生日期
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 100px;"
      >
        <div
          class="t-form__controls--content"
        >
          <div
            class="t-date-picker t-size-m"
          >
            <div
              class="t-popup-reference t-date-picker-popup-reference"
            >
              <div
                class="t-form-controls"
              >
                <div
                  class="t-input t-input--suffix"
                >
                  <input
                    class="t-input__inner"
                    placeholder="请选择日期"
                    readonly=""
                    value=""
                  />
                  <span
                    class="t-input__suffix"
                  >
                    <svg
                      class="t-icon t-icon-calendar t-size-m"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-form__item t-form-item__gender"
    >
      <div
        class="t-form__label t-form__label--colon t-form__label--right"
        style="width: 100px;"
      >
        <label>
          性别
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 100px;"
      >
        <div
          class="t-form__controls--content"
        >
          <div
            class="t-radio-group t-radio-group-medium t-radio-group-outline"
          >
            <label
              class="t-radio"
            >
              <input
                class="t-radio__former"
                readonly=""
                type="radio"
                value="male"
              />
              <span
                class="t-radio__input"
              />
              <span
                class="t-radio__label"
              >
                男性
              </span>
            </label>
            <label
              class="t-radio"
            >
              <input
                class="t-radio__former"
                readonly=""
                type="radio"
                value="female"
              />
              <span
                class="t-radio__input"
              />
              <span
                class="t-radio__label"
              >
                女性
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-form__item t-form-item__course"
    >
      <div
        class="t-form__label t-form__label--colon t-form__label--right"
        style="width: 100px;"
      >
        <label>
          课程
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 100px;"
      >
        <div
          class="t-form__controls--content"
        >
          <div
            class="t-checkbox-group"
          >
            <label
              class="t-checkbox"
            >
              <input
                class="t-checkbox__former"
                readonly=""
                type="checkbox"
                value="la"
              />
              <span
                class="t-checkbox__input"
              />
              <span
                class="t-checkbox__label"
              >
                加辣
              </span>
            </label>
            <label
              class="t-checkbox"
            >
              <input
                class="t-checkbox__former"
                readonly=""
                type="checkbox"
                value="ma"
              />
              <span
                class="t-checkbox__input"
              />
              <span
                class="t-checkbox__label"
              >
                加麻
              </span>
            </label>
            <label
              class="t-checkbox"
            >
              <input
                class="t-checkbox__former"
                readonly=""
                type="checkbox"
                value="nocong"
              />
              <span
                class="t-checkbox__input"
              />
              <span
                class="t-checkbox__label"
              >
                不要葱花
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-form__item t-form-item__status"
    >
      <div
        class="t-form__label t-form__label--colon t-form__label--right"
        style="width: 100px;"
      >
        <label
          for="status"
        >
          状态
        </label>
      </div>
      <div
        class="t-form__controls"
        style="margin-left: 100px;"
      >
        <div
          class="t-form__controls--content"
        >
          <button
            class="t-switch"
            role="switch"
            type="button"
          >
            <span
              class="t-switch__handle"
            />
            <div
              class="t-switch__content"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="t-form__item"
    >
      <div
        class="t-form__controls"
        style="margin-left: 100px;"
      >
        <div
          class="t-form__controls--content"
        >
          <button
            class="t-button t-button--theme-primary t-button--variant-base"
            style="position: relative;"
            type="submit"
          >
            <span
              class="t-button__text"
            >
              提交
            </span>
          </button>
          <button
            class="t-button t-button--theme-primary t-button--variant-base"
            style="margin-left: 12px; position: relative;"
            type="reset"
          >
            <span
              class="t-button__text"
            >
              重置
            </span>
          </button>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`custom-validator.jsx 1`] = `
<DocumentFragment>
  <div>
    <form
      class="t-form"
    >
      <div
        class="t-form__item t-form-item__account"
      >
        <div
          class="t-form__label t-form__label--required t-form__label--right"
          style="width: 100px;"
        >
          <label>
            用户名
          </label>
        </div>
        <div
          class="t-form__controls"
          style="margin-left: 100px;"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-form__item t-form-item__password"
      >
        <div
          class="t-form__label t-form__label--required t-form__label--right"
          style="width: 100px;"
        >
          <label>
            密码
          </label>
        </div>
        <div
          class="t-form__controls"
          style="margin-left: 100px;"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-form__item t-form-item__rePassword"
      >
        <div
          class="t-form__label t-form__label--required t-form__label--right"
          style="width: 100px;"
        >
          <label>
            确认密码
          </label>
        </div>
        <div
          class="t-form__controls"
          style="margin-left: 100px;"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-form__item"
      >
        <div
          class="t-form__controls"
          style="margin-left: 100px;"
        >
          <div
            class="t-form__controls--content"
          >
            <button
              class="t-button t-button--theme-primary t-button--variant-base"
              style="margin-right: 10px; position: relative;"
              type="submit"
            >
              <span
                class="t-button__text"
              >
                提交
              </span>
            </button>
            <button
              class="t-button t-button--theme-primary t-button--variant-base"
              style="position: relative;"
              type="reset"
            >
              <span
                class="t-button__text"
              >
                重置
              </span>
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`layout.jsx 1`] = `
<DocumentFragment>
  <div>
    <div
      class="t-row t-row-start t-row-top"
      style="row-gap: 0px; margin-left: 0px; margin-right: 0px; margin-bottom: 16px;"
    >
      <div
        class="t-radio-group t-radio-group-medium t-radio-group-outline"
      >
        <label
          class="t-radio-button"
        >
          <input
            class="t-radio-button__former"
            readonly=""
            type="radio"
            value="vertical"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            纵向布局
          </span>
        </label>
        <label
          class="t-radio-button t-is-checked"
        >
          <input
            checked=""
            class="t-radio-button__former"
            readonly=""
            type="radio"
            value="inline"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            行内布局
          </span>
        </label>
      </div>
    </div>
    <form
      class="t-form t-form-inline"
    >
      <div
        class="t-form__item t-form-item__name"
      >
        <div
          class="t-form__label t-form__label--right"
          style="width: 60px;"
        >
          <label>
            名字
          </label>
        </div>
        <div
          class="t-form__controls"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-form__item t-form-item__password"
      >
        <div
          class="t-form__label t-form__label--right"
          style="width: 60px;"
        >
          <label>
            密码
          </label>
        </div>
        <div
          class="t-form__controls"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`login.jsx 1`] = `
<DocumentFragment>
  <div
    style="width: 350px;"
  >
    <form
      class="t-form"
    >
      <div
        class="t-form__item t-form-item__account"
      >
        <div
          class="t-form__controls"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input t-input--prefix"
            >
              <span
                class="t-input__prefix"
              >
                <svg
                  class="t-icon t-icon-desktop t-size-m"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M2.5 11h5v2H3v1h10v-1H8.5v-2h5a1 1 0 001-1V3a1 1 0 00-1-1h-11a1 1 0 00-1 1v7a1 1 0 001 1zm0-8h11v7h-11V3z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </span>
              <input
                class="t-input__inner"
                placeholder="请输入账户名"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-form__item t-form-item__password"
      >
        <div
          class="t-form__controls"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input t-input--prefix"
            >
              <span
                class="t-input__prefix"
              >
                <svg
                  class="t-icon t-icon-lock-on t-size-m"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M6 10v1h4v-1H6z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                  <path
                    d="M4.5 5v1H3a.5.5 0 00-.5.5v7c0 .28.22.5.5.5h10a.5.5 0 00.5-.5v-7A.5.5 0 0013 6h-1.5V5a3.5 3.5 0 00-7 0zm6 1h-5V5a2.5 2.5 0 015 0v1zm-7 1h9v6h-9V7z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </span>
              <input
                class="t-input__inner"
                placeholder="请输入密码"
                type="password"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-form__item"
      >
        <div
          class="t-form__controls"
        >
          <div
            class="t-form__controls--content"
          >
            <button
              class="t-button t-button--theme-primary t-button--variant-base t-size-full-width"
              style="position: relative;"
              type="submit"
            >
              <span
                class="t-button__text"
              >
                登录
              </span>
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`validator.jsx 1`] = `
<DocumentFragment>
  <div>
    <form
      class="t-form"
    >
      <div
        class="t-form__item t-form-item__account t-form__item-with-help t-form__item-with-extra"
      >
        <div
          class="t-form__label t-form__label--required t-form__label--right"
          style="width: 100px;"
        >
          <label>
            用户名
          </label>
        </div>
        <div
          class="t-form__controls"
          style="margin-left: 100px;"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value="张三"
              />
            </div>
          </div>
          <div
            class="t-form__help"
          >
            这里请填写用户名
          </div>
        </div>
      </div>
      <div
        class="t-form__item t-form-item__password t-form__item-with-help t-form__item-with-extra"
      >
        <div
          class="t-form__label t-form__label--required t-form__label--right"
          style="width: 100px;"
        >
          <label>
            密码
          </label>
        </div>
        <div
          class="t-form__controls"
          style="margin-left: 100px;"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
          </div>
          <div
            class="t-form__help"
          >
            这里请填写密码
          </div>
        </div>
      </div>
      <div
        class="t-form__item t-form-item__email"
      >
        <div
          class="t-form__label t-form__label--required t-form__label--right"
          style="width: 100px;"
        >
          <label>
            邮箱
          </label>
        </div>
        <div
          class="t-form__controls"
          style="margin-left: 100px;"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-form__item t-form-item__gender"
      >
        <div
          class="t-form__label t-form__label--required t-form__label--right"
          style="width: 100px;"
        >
          <label>
            性别
          </label>
        </div>
        <div
          class="t-form__controls"
          style="margin-left: 100px;"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-radio-group t-radio-group-medium t-radio-group-outline"
            >
              <label
                class="t-radio"
              >
                <input
                  class="t-radio__former"
                  readonly=""
                  type="radio"
                  value="male"
                />
                <span
                  class="t-radio__input"
                />
                <span
                  class="t-radio__label"
                >
                  男
                </span>
              </label>
              <label
                class="t-radio"
              >
                <input
                  class="t-radio__former"
                  readonly=""
                  type="radio"
                  value="femal"
                />
                <span
                  class="t-radio__input"
                />
                <span
                  class="t-radio__label"
                >
                  女
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-form__item t-form-item__course"
      >
        <div
          class="t-form__label t-form__label--required t-form__label--right"
          style="width: 100px;"
        >
          <label>
            课程
          </label>
        </div>
        <div
          class="t-form__controls"
          style="margin-left: 100px;"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-checkbox-group"
            >
              <label
                class="t-checkbox"
              >
                <input
                  class="t-checkbox__former"
                  readonly=""
                  type="checkbox"
                  value="1"
                />
                <span
                  class="t-checkbox__input"
                />
                <span
                  class="t-checkbox__label"
                >
                  语文
                </span>
              </label>
              <label
                class="t-checkbox"
              >
                <input
                  class="t-checkbox__former"
                  readonly=""
                  type="checkbox"
                  value="2"
                />
                <span
                  class="t-checkbox__input"
                />
                <span
                  class="t-checkbox__label"
                >
                  数学
                </span>
              </label>
              <label
                class="t-checkbox"
              >
                <input
                  class="t-checkbox__former"
                  readonly=""
                  type="checkbox"
                  value="3"
                />
                <span
                  class="t-checkbox__input"
                />
                <span
                  class="t-checkbox__label"
                >
                  英语
                </span>
              </label>
              <label
                class="t-checkbox"
              >
                <input
                  class="t-checkbox__former"
                  readonly=""
                  type="checkbox"
                  value="4"
                />
                <span
                  class="t-checkbox__input"
                />
                <span
                  class="t-checkbox__label"
                >
                  体育
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-form__item t-form-item__date"
      >
        <div
          class="t-form__label t-form__label--right"
          style="width: 100px;"
        >
          <label>
            入学时间
          </label>
        </div>
        <div
          class="t-form__controls"
          style="margin-left: 100px;"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-form__item t-form-item__content.url"
      >
        <div
          class="t-form__label t-form__label--required t-form__label--right"
          style="width: 100px;"
        >
          <label>
            个人网站
          </label>
        </div>
        <div
          class="t-form__controls"
          style="margin-left: 100px;"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-form__item"
      >
        <div
          class="t-form__controls"
          style="margin-left: 100px;"
        >
          <div
            class="t-form__controls--content"
          >
            <button
              class="t-button t-button--theme-primary t-button--variant-base"
              style="margin-right: 10px; position: relative;"
              type="submit"
            >
              <span
                class="t-button__text"
              >
                提交
              </span>
            </button>
            <button
              class="t-button t-button--theme-primary t-button--variant-base"
              style="position: relative;"
              type="reset"
            >
              <span
                class="t-button__text"
              >
                重置
              </span>
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`validator-status.jsx 1`] = `
<DocumentFragment>
  <div>
    <form
      class="t-form"
    >
      <div
        class="t-form__item t-form-item__fail t-form__item-with-help t-form__item-with-extra"
      >
        <div
          class="t-form__label t-form__label--required t-form__label--right"
          style="width: 100px;"
        >
          <label>
            失败
          </label>
        </div>
        <div
          class="t-form__controls"
          style="margin-left: 100px;"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
          </div>
          <div
            class="t-form__help"
          >
            校验不通过，请输入正确内容
          </div>
        </div>
      </div>
      <div
        class="t-form__item t-form-item__warning"
      >
        <div
          class="t-form__label t-form__label--required t-form__label--right"
          style="width: 100px;"
        >
          <label>
            警告
          </label>
        </div>
        <div
          class="t-form__controls"
          style="margin-left: 100px;"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-form__item t-form-item__success"
      >
        <div
          class="t-form__label t-form__label--right"
          style="width: 100px;"
        >
          <label>
            成功
          </label>
        </div>
        <div
          class="t-form__controls"
          style="margin-left: 100px;"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-form__item t-form-item__failB"
      >
        <div
          class="t-form__label t-form__label--required t-form__label--right"
          style="width: 100px;"
        >
          <label>
            失败
          </label>
        </div>
        <div
          class="t-form__controls"
          style="margin-left: 100px;"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                placeholder="隐藏状态icon"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-form__item t-form-item__warningB"
      >
        <div
          class="t-form__label t-form__label--required t-form__label--right"
          style="width: 100px;"
        >
          <label>
            警告
          </label>
        </div>
        <div
          class="t-form__controls"
          style="margin-left: 100px;"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-form__item t-form-item__loading"
      >
        <div
          class="t-form__label t-form__label--right"
          style="width: 100px;"
        >
          <label>
            加载中
          </label>
        </div>
        <div
          class="t-form__controls"
          style="margin-left: 100px;"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                placeholder="正在校验中，请稍等"
                value=""
              />
            </div>
            <span
              class="t-form__status"
            >
              <svg
                class="t-icon t-icon-loading"
                fill="none"
                height="1em"
                name="loading"
                style="color: rgb(24, 144, 255); font-size: 25px;"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 1.5a6.5 6.5 0 000 13v-1.63A4.87 4.87 0 1112.88 8h1.62A6.5 6.5 0 008 1.5z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="t-form__item t-form-item__add t-form__item-with-help t-form__item-with-extra"
      >
        <div
          class="t-form__label t-form__label--right"
          style="width: 100px;"
        >
          <label>
            新增
          </label>
        </div>
        <div
          class="t-form__controls"
          style="margin-left: 100px;"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
            <span
              class="t-form__status"
            >
              <svg
                class="t-icon t-icon-add-rectangle"
                fill="none"
                height="1em"
                name="add-rectangle"
                style="font-size: 25px;"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M7.5 11V8.5H5v-1h2.5V5h1v2.5H11v1H8.5V11h-1z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
                <path
                  d="M3 14a1 1 0 01-1-1V3a1 1 0 011-1h10a1 1 0 011 1v10a1 1 0 01-1 1H3zm0-1h10V3H3v10z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
          </div>
          <div
            class="t-form__help"
          >
            自定义新增icon
          </div>
        </div>
      </div>
      <div
        class="t-form__item t-form-item__help t-form__item-with-help t-form__item-with-extra"
      >
        <div
          class="t-form__label t-form__label--right"
          style="width: 100px;"
        >
          <label>
            帮助
          </label>
        </div>
        <div
          class="t-form__controls"
          style="margin-left: 100px;"
        >
          <div
            class="t-form__controls--content"
          >
            <div
              class="t-input"
            >
              <input
                class="t-input__inner"
                value=""
              />
            </div>
            <span
              class="t-form__status"
            >
              <svg
                class="t-icon t-icon-help-circle"
                fill="none"
                height="1em"
                name="help-circle"
                style="font-size: 25px;"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M7.4 11.6a.6.6 0 111.2 0 .6.6 0 01-1.2 0zM8 4a2.43 2.43 0 00-2.43 2.43h1a1.43 1.43 0 012.85 0c0 .54-.45 1.08-1.03 1.31-.53.22-.9.74-.9 1.35V10h1v-.9c0-.2.12-.36.28-.43.83-.34 1.65-1.17 1.65-2.24a2.43 2.43 0 00-2.43-2.42z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
                <path
                  d="M15 8A7 7 0 101 8a7 7 0 0014 0zm-1 0A6 6 0 112 8a6 6 0 0112 0z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
          </div>
          <div
            class="t-form__help"
          >
            自定义帮助icon
          </div>
        </div>
      </div>
      <div
        class="t-form__item"
      >
        <div
          class="t-form__controls"
          style="margin-left: 100px;"
        >
          <div
            class="t-form__controls--content"
          >
            <button
              class="t-button t-button--theme-primary t-button--variant-base"
              style="margin-right: 10px; position: relative;"
              type="submit"
            >
              <span
                class="t-button__text"
              >
                提交
              </span>
            </button>
            <button
              class="t-button t-button--theme-primary t-button--variant-base"
              style="position: relative;"
              type="reset"
            >
              <span
                class="t-button__text"
              >
                重置
              </span>
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
